tests/snapshots/regression_test__tests__medium_rust_split_graphemes_false_strip_whitespace_false.snap
---
source: tests/regression_test.rs
expression: diff_hunks
---
RichHunks(
    [
        New(
            Hunk(
                [
                    Line {
                        line_index: 2,
                        entries: [
                            Entry {
                                reference: {Node , (2, 26) - (2, 27)},
                                text: ",",
                                start_position: Point {
                                    row: 2,
                                    column: 26,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 26,
                                },
                                kind_id: 53,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 20,
                        entries: [
                            Entry {
                                reference: {Node identifier (20, 4) - (20, 15)},
                                text: "is_naked_fn",
                                start_position: Point {
                                    row: 20,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 20,
                                    column: 4,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        Old(
            Hunk(
                [
                    Line {
                        line_index: 17,
                        entries: [
                            Entry {
                                reference: {Node identifier (17, 7) - (17, 15)},
                                text: "is_naked",
                                start_position: Point {
                                    row: 17,
                                    column: 7,
                                },
                                end_position: Point {
                                    row: 17,
                                    column: 7,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 42,
                        entries: [
                            Entry {
                                reference: {Node , (42, 19) - (42, 20)},
                                text: ",",
                                start_position: Point {
                                    row: 42,
                                    column: 19,
                                },
                                end_position: Point {
                                    row: 42,
                                    column: 19,
                                },
                                kind_id: 53,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 59,
                        entries: [
                            Entry {
                                reference: {Node identifier (59, 4) - (59, 9)},
                                text: "bleat",
                                start_position: Point {
                                    row: 59,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 59,
                                    column: 4,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        Old(
            Hunk(
                [
                    Line {
                        line_index: 53,
                        entries: [
                            Entry {
                                reference: {Node identifier (53, 7) - (53, 11)},
                                text: "talk",
                                start_position: Point {
                                    row: 53,
                                    column: 7,
                                },
                                end_position: Point {
                                    row: 53,
                                    column: 7,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        Old(
            Hunk(
                [
                    Line {
                        line_index: 61,
                        entries: [
                            Entry {
                                reference: {Node identifier (61, 12) - (61, 17)},
                                text: "dolly",
                                start_position: Point {
                                    row: 61,
                                    column: 12,
                                },
                                end_position: Point {
                                    row: 61,
                                    column: 12,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 67,
                        entries: [
                            Entry {
                                reference: {Node identifier (67, 9) - (67, 11)},
                                text: "ed",
                                start_position: Point {
                                    row: 67,
                                    column: 9,
                                },
                                end_position: Point {
                                    row: 67,
                                    column: 9,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 70,
                        entries: [
                            Entry {
                                reference: {Node identifier (70, 1) - (70, 3)},
                                text: "ed",
                                start_position: Point {
                                    row: 70,
                                    column: 1,
                                },
                                end_position: Point {
                                    row: 70,
                                    column: 1,
                                },
                                kind_id: 1,
                            },
                            Entry {
                                reference: {Node field_identifier (70, 4) - (70, 9)},
                                text: "bleat",
                                start_position: Point {
                                    row: 70,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 70,
                                    column: 4,
                                },
                                kind_id: 325,
                            },
                        ],
                    },
                    Line {
                        line_index: 71,
                        entries: [
                            Entry {
                                reference: {Node identifier (71, 1) - (71, 3)},
                                text: "ed",
                                start_position: Point {
                                    row: 71,
                                    column: 1,
                                },
                                end_position: Point {
                                    row: 71,
                                    column: 1,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                    Line {
                        line_index: 72,
                        entries: [
                            Entry {
                                reference: {Node identifier (72, 1) - (72, 3)},
                                text: "ed",
                                start_position: Point {
                                    row: 72,
                                    column: 1,
                                },
                                end_position: Point {
                                    row: 72,
                                    column: 1,
                                },
                                kind_id: 1,
                            },
                            Entry {
                                reference: {Node field_identifier (72, 4) - (72, 9)},
                                text: "bleat",
                                start_position: Point {
                                    row: 72,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 72,
                                    column: 4,
                                },
                                kind_id: 325,
                            },
                        ],
                    },
                ],
            ),
        ),
        Old(
            Hunk(
                [
                    Line {
                        line_index: 64,
                        entries: [
                            Entry {
                                reference: {Node identifier (64, 4) - (64, 9)},
                                text: "dolly",
                                start_position: Point {
                                    row: 64,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 64,
                                    column: 4,
                                },
                                kind_id: 1,
                            },
                            Entry {
                                reference: {Node field_identifier (64, 10) - (64, 14)},
                                text: "talk",
                                start_position: Point {
                                    row: 64,
                                    column: 10,
                                },
                                end_position: Point {
                                    row: 64,
                                    column: 10,
                                },
                                kind_id: 325,
                            },
                        ],
                    },
                    Line {
                        line_index: 65,
                        entries: [
                            Entry {
                                reference: {Node identifier (65, 4) - (65, 9)},
                                text: "dolly",
                                start_position: Point {
                                    row: 65,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 65,
                                    column: 4,
                                },
                                kind_id: 1,
                            },
                        ],
                    },
                    Line {
                        line_index: 66,
                        entries: [
                            Entry {
                                reference: {Node identifier (66, 4) - (66, 9)},
                                text: "dolly",
                                start_position: Point {
                                    row: 66,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 66,
                                    column: 4,
                                },
                                kind_id: 1,
                            },
                            Entry {
                                reference: {Node field_identifier (66, 10) - (66, 14)},
                                text: "talk",
                                start_position: Point {
                                    row: 66,
                                    column: 10,
                                },
                                end_position: Point {
                                    row: 66,
                                    column: 10,
                                },
                                kind_id: 325,
                            },
                        ],
                    },
                ],
            ),
        ),
    ],
)
